# pyPSSAlib

./: .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: github-actions.yml  push_pull.yml  release.yml
ci/: bootstrap.py  macos-13-brew.sh  macos-13-build.sh  macos-14.sh  macos-brew.sh  macos-build.sh  macos-latest-brew.sh  macos-latest.sh  manylinux.sh  requirements.txt  ubuntu-latest.sh  windows-latest.ps1
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  reference.rst  requirements.txt  usage.rst
examples/: validation.py
src/: main.cpp  models.h  utils.h
tests/: test_pypssalib.py
