[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "ninja",
    "cmake>=3.15",
    "pybind11>=2.6.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "pypssalib"
authors = [
    {name = "Oleksandr Ostrenko", email = "oleksandr@ostrenko.dev"},
]
description = "Python bindings for pSSAlib"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["ssa", "stochastic", "simulation", "algorithm", "bioinformatics", "science"]
license = {text = "BSD-3-Clause"}
classifiers = [
    # As from http://pypi.python.org/pypi?%3Aaction=list_classifiers
    # "Development Status :: 1 - Planning",
    #"Development Status :: 2 - Pre-Alpha",
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    # "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy"]
dynamic = ["version"]

# see https://daniel.feldroy.com/posts/2023-08-pypi-project-urls-cheatsheet
[project.urls]
# Project homepage
homepage = "https://github.com/breezerider/pypssalib"
# The changelog
changelog = "https://github.com/breezerider/pypssalib/blob/master/CHANGELOG.rst"
# Any long form docs
documentation = "https://pypssalib.readthedocs.io/"
# Bugs/issues/feature requests
issues = "https://github.com/breezerider/pypssalib/issues"


[tool.black]
line-length = 120
target-version = ['py311']
preview = true
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = false
force_grid_wrap = 0
force_single_line = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
indent = 4
atomic = true
case_sensitive = false
balanced_wrapping = false

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "setup.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
search = "Unreleased"
replace = "{new_version} ({now:%Y-%m-%d})"

[[tool.bumpversion.files]]
filename = "README.rst"
search = "v{current_version}"
replace = "v{new_version}"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = release = '{current_version}'"
replace = "version = release = '{new_version}'"
